# intel-aero-RTF-gr871

./: .gitignore  CMakeLists.txt  README.md  README.md~  package.xml
include/: udp.h  utils.h  vicon.h
launch/: hover.launch  hover.launch~
msg/: controllerLog.msg  vicon.msg
src/: FastSLAM.h~  FastSLAM_node.cpp  Mtest.cpp  controller.cpp  depthgrab.cpp  markers.cpp  plotting.m  test.cpp  test_imagepub.cpp  test_imagesub.cpp  true_position.cpp  udp.cpp  utils.cpp  vicon.cpp  vicon_j.cpp  yawEstimation.cpp  yawEstimation.cpp.autosave
src/FastSLAM/: CMakeLists.txt  FastSLAM.cpp  FastSLAM.h  InverseMeasurementModel.m  LoadLatestLogs.m  MaltePlotting.m  MeasurementModel.m  MeasurementVisualization.m  MotionModelInputGeneration.m  MotionModelVerification.m  RealtimePlaybackPlotting.m  ThomasPlotting.m  arucu_positions.txt  config.csv  plotting.m  plotting.m~  uunwrap.m
src/FastSLAM/DataForPlotting/ManualFlight/: Test descriptions  Test descriptions~
src/FastSLAM/DataForPlotting/ManualFlight/GOTdisabledAndReenabled/: 170525_181639_Camera.txt  170525_181639_Mocap.txt  170525_181639_MocapVelocity.txt  170525_181639_MotionModel.txt
src/FastSLAM/DataForPlotting/ManualFlight/GOTdisabledAt5s/: 170525_175234_Camera.txt  170525_175234_Mocap.txt  170525_175234_MocapVelocity.txt  170525_175234_MotionModel.txt
src/FastSLAM/DataForPlotting/ManualFlight/GOTdisabledAt75s/: 170525_180736_Camera.txt  170525_180736_Mocap.txt  170525_180736_MocapVelocity.txt  170525_180736_MotionModel.txt
src/FastSLAM/DataForPlotting/ManualFlight/GOTenabledAlways/: 170525_181200_Camera.txt  170525_181200_Mocap.txt  170525_181200_MocapVelocity.txt  170525_181200_MotionModel.txt
src/FastSLAM/DataForPlotting/StandStillTest/: Test descriptions
src/FastSLAM/DataForPlotting/StandStillTest/GOTdisabledAndReenabled/: 170525_174245_Camera.txt  170525_174245_MocapVelocity.txt  170525_174245_MotionModel.txt  t_400.m
src/FastSLAM/DataForPlotting/StandStillTest/GOTdisabledAt30s/: 170525_173246_Camera.txt  170525_173246_Intrinsics.txt  170525_173246_Mocap.txt  170525_173246_MocapVelocity.txt  170525_173246_MotionModel.txt  t_407.m
src/FastSLAM/DataForPlotting/StandStillTest/GOTdisabledAt5s/: 170525_173021_Camera.txt  170525_173021_Mocap.txt  170525_173021_MocapVelocity.txt  170525_173021_MotionModel.txt  t_431.m
src/FastSLAM/DataForPlotting/StandStillTest/GOTenabledAlways/: 170525_173709_Camera.txt  170525_173709_MocapVelocity.txt  170525_173709_MotionModel.txt  t_386.m
src/FastSLAM/DataForPlotting/VerticalBox/: Test descriptions
src/FastSLAM/DataForPlotting/VerticalBox/GOTdisabledAndReenabled/: 170525_185654_Camera.txt  170525_185654_Mocap.txt  170525_185654_MocapVelocity.txt  170525_185654_MotionModel.txt
src/FastSLAM/DataForPlotting/VerticalBox/GOTdisabledAt5s/: 170525_183828_Camera.txt  170525_183828_MocapVelocity.txt  170525_183828_MotionModel.txt
src/FastSLAM/DataForPlotting/VerticalBox/GOTdisabledAt75s/: 170525_184248_Camera.txt  (+4 more)
src/FastSLAM/DataForPlotting/VerticalBox20s/: 170622_123426_Camera.txt  170622_123426_Mocap.txt  170622_123426_MocapVelocity.txt  170622_123426_MotionModel.txt  Test descriptions  landmarks.m
src/observers/: CMakeLists.txt
src/observers/ekf/: ekf.cpp  ekf.h  ekf_initialize.cpp  ekf_initialize.h  ekf_rtw.bat  ekf_rtw.mk  ekf_terminate.cpp  ekf_terminate.h  ekf_types.h  eye.cpp  eye.h  inv.cpp  inv.h  measurementModel.cpp  measurementModel.h  mod.cpp  mod.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  uunwrap.cpp  uunwrap.h
src/observers/ekf/examples/: main.cpp  main.h
src/observers/ekf/interface/: _coder_ekf_api.c  _coder_ekf_api.h  _coder_ekf_info.c  _coder_ekf_info.h  _coder_ekf_mex.cpp  _coder_ekf_mex.h
src/observers/ekfnobias/: ekfnobias.cpp  ekfnobias.h  ekfnobias_initialize.cpp  ekfnobias_initialize.h  ekfnobias_rtw.mk  ekfnobias_terminate.cpp  ekfnobias_terminate.h  ekfnobias_types.h  eye.cpp  eye.h  inv.cpp  inv.h  measurementModel.cpp  measurementModel.h  mod.cpp  mod.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  uunwrap.cpp  uunwrap.h
src/observers/ekfnobias/examples/: main.cpp  main.h
src/observers/ekfnobias/interface/: _coder_ekfnobias_api.c  _coder_ekfnobias_api.h  _coder_ekfnobias_info.c  _coder_ekfnobias_info.h  _coder_ekfnobias_mex.cpp  _coder_ekfnobias_mex.h
src/observers/observer_xdot/: observer_xdot.cpp  observer_xdot.h  observer_xdot_initialize.cpp  observer_xdot_initialize.h  observer_xdot_terminate.cpp  observer_xdot_terminate.h  observer_xdot_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
src/observers/observer_xdot/examples/: main.cpp  main.h
src/observers/observer_xdot/interface/: _coder_observer_xdot_api.c  _coder_observer_xdot_api.h  _coder_observer_xdot_info.c  _coder_observer_xdot_info.h  _coder_observer_xdot_mex.cpp  _coder_observer_xdot_mex.h
src/observers/observer_ydot/: observer_ydot.cpp  observer_ydot.h  observer_ydot_initialize.cpp  observer_ydot_initialize.h  observer_ydot_terminate.cpp  observer_ydot_terminate.h  observer_ydot_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
src/observers/observer_ydot/examples/: main.cpp  main.h
src/observers/observer_ydot/interface/: _coder_observer_ydot_api.c  _coder_observer_ydot_api.h  _coder_observer_ydot_info.c  _coder_observer_ydot_info.h  _coder_observer_ydot_mex.cpp  _coder_observer_ydot_mex.h
src/observers/observer_z/: observer_z.cpp  observer_z.h  observer_z_initialize.cpp  observer_z_initialize.h  observer_z_terminate.cpp  observer_z_terminate.h  observer_z_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
src/observers/observer_z/examples/: main.cpp  main.h
src/observers/observer_z/interface/: _coder_observer_z_api.c  _coder_observer_z_api.h  _coder_observer_z_info.c  _coder_observer_z_info.h  _coder_observer_z_mex.cpp  _coder_observer_z_mex.h
srv/: position.srv
(+3 files in other folders)
